--- a/components/Loader/Loader.module.css
+++ b/components/Loader/Loader.module.css
@@ -1,61 +1,67 @@
-.loader_content{
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
+.loader_content {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
 
-.loader{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
+.loader {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
 }
 
 .line_loader .line {
-    width: 8px;
-    position: absolute;
-    border-radius: 5px;
-    bottom: 0;
-    background: -webkit-gradient(linear, left top, left bottom, from(#1ee95d), to(#5714ce));
-    background: -webkit-linear-gradient(top, #1ee95d, #5714ce);
-    background: -o-linear-gradient(top, #1ee95d, #5714ce);
-    background: linear-gradient(to bottom, #1ee95d, #5714ce);
+  width: 8px;
+  position: absolute;
+  border-radius: 5px;
+  bottom: 0;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#1ee95d),
+    to(#5714ce)
+  );
+  background: -webkit-linear-gradient(top, #1ee95d, #5714ce);
+  background: -o-linear-gradient(top, #1ee95d, #5714ce);
+  background: linear-gradient(to bottom, #1ee95d, #5714ce);
 }
 
 .line_loader .line1 {
-    left: 0;
-    -webkit-animation: line-grow 0.5s ease alternate infinite;
-    animation: line-grow 0.5s ease alternate infinite;
+  left: 0;
+  -webkit-animation: line-grow 0.5s ease alternate infinite;
+  animation: line-grow 0.5s ease alternate infinite;
 }
 
 .line_loader .line2 {
-    left: 20px;
-    -webkit-animation: line-grow 0.5s 0.2s ease alternate infinite;
-    animation: line-grow 0.5s 0.2s ease alternate infinite;
+  left: 20px;
+  -webkit-animation: line-grow 0.5s 0.2s ease alternate infinite;
+  animation: line-grow 0.5s 0.2s ease alternate infinite;
 }
 
 .line_loader .line3 {
-    left: 40px;
-    -webkit-animation: line-grow 0.5s 0.4s ease alternate infinite;
-    animation: line-grow 0.5s 0.4s ease alternate infinite;
+  left: 40px;
+  -webkit-animation: line-grow 0.5s 0.4s ease alternate infinite;
+  animation: line-grow 0.5s 0.4s ease alternate infinite;
 }
 
 @-webkit-keyframes line-grow {
-    0% {
-        height: 0;
-    }
-    100% {
-        height: 75%;
-    }
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 75%;
+  }
 }
 
 @keyframes line-grow {
-    0% {
-        height: 0;
-    }
-    100% {
-        height: 75%;
-    }
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 75%;
+  }
 }
